6-k8_environment/ocp-restaurant-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: restaurant-config-route
  namespace: default
spec:
  host: >-
    restaurant-config-route-default.rpozzi-ocp-3c76f4d12b7fe02f9cab56e64bec3e29-0001.eu-de.containers.appdomain.cloud
  to:
    kind: Service
    name: restaurant-config-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: >-
        restaurant-config-route-default.rpozzi-ocp-3c76f4d12b7fe02f9cab56e64bec3e29-0001.eu-de.containers.appdomain.cloud
      routerName: router
      wildcardPolicy: None
